--- a/hack1/notebook/exercise2.ipynb
+++ b/hack1/notebook/exercise2.ipynb
@@ -1,1 +1,217 @@
-{"cells": [{"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["from nlp.app import handler"]}, {"cell_type": "markdown", "metadata": {}, "source": ["Part 1<br>\n", "In this exercise, we'll use NLPs to search and download papers from arXiv"]}, {"cell_type": "markdown", "metadata": {}, "source": ["Select keywords and topics of papers to download"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["event = {\n", "    'keyphrases': 'ML',\n", "    'queries': {'DFT': 'nasicon'},\n", "    'num_results': 5\n", "}"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["context = {}"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["result = handler(event, context)"]}, {"cell_type": "markdown", "metadata": {}, "source": ["Convert the keyphrases and queries from the event"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["keyphrases = event['keyphrases'].split('-')\n", "queries = event['queries']"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["print(result)"]}, {"cell_type": "markdown", "metadata": {}, "source": ["Part 2"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["from discomat.cuds.cuds import Cuds\n", "from discomat.visualisation.cuds_vis import gvis\n", "from discomat.ontology.namespaces import DOMEDS\n", "import csv"]}, {"cell_type": "markdown", "metadata": {}, "source": ["Now we'll use discomat to create a dataset of the downlaoded papers"]}, {"cell_type": "markdown", "metadata": {}, "source": ["Load dataset from CSV"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["with open('papers/metadata.csv', mode='r') as file:\n", "    reader = csv.reader(file)\n", "    headers = next(reader)  # Read the headers\n\n", "    # Here we'll use list comprehension instead of creating each triple line by line\n\n", "    # Clean and map the headers to ontology fields\n", "    ontology_fields = [getattr(DOMEDS, header.strip()) for header in headers if header.strip()]\n\n", "    # Read the dataset rows\n", "    dataset = [tuple(row) for row in reader]"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["gall = []"]}, {"cell_type": "markdown", "metadata": {}, "source": ["Loop through the dataset and create CUDS objects"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["for data in dataset:\n", "    ds_001 = Cuds(ontology_type=DOMEDS.data_set, description=\"Example of DOME4.0 dataset\")\n\n", "    # Use list comprehension to add each field to the CUDS object\n", "    [ds_001.add(field, value) for field, value in zip(ontology_fields, data)]\n", "    print(ds_001)"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["    # accumulate the current dataset graph to gall\n", "    gall += ds_001.graph"]}, {"cell_type": "markdown", "metadata": {}, "source": ["Visualize the combined graph and export to HTML"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["gvis(gall, \"papers.html\")"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.6.4"}}, "nbformat": 4, "nbformat_minor": 2}
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath('../'))\n",
+    "from nlp.app import handler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Part 1<br>\n",
+    "In this exercise, we'll use NLPs to search and download papers from arXiv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Select keywords and topics of papers to download"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "event = {\n",
+    "    'keyphrases': 'ML',\n",
+    "    'queries': {'DFT': 'nasicon'},\n",
+    "    'num_results': 5\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "context = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = handler(event, context)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert the keyphrases and queries from the event"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keyphrases = event['keyphrases'].split('-')\n",
+    "queries = event['queries']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from discomat.cuds.cuds import Cuds\n",
+    "from discomat.visualisation.cuds_vis import gvis\n",
+    "from discomat.ontology.namespaces import DOMEDS\n",
+    "import csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we'll use discomat to create a dataset of the downlaoded papers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load dataset from CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('papers/metadata.csv', mode='r') as file:\n",
+    "    reader = csv.reader(file)\n",
+    "    headers = next(reader)  # Read the headers\n",
+    "\n",
+    "    # Here we'll use list comprehension instead of creating each triple line by line\n",
+    "\n",
+    "    # Clean and map the headers to ontology fields\n",
+    "    ontology_fields = [getattr(DOMEDS, header.strip()) for header in headers if header.strip()]\n",
+    "\n",
+    "    # Read the dataset rows\n",
+    "    dataset = [tuple(row) for row in reader]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gall = []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Loop through the dataset and create CUDS objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for data in dataset:\n",
+    "    ds_001 = Cuds(ontology_type=DOMEDS.data_set, description=\"Example of DOME4.0 dataset\")\n",
+    "\n",
+    "    # Use list comprehension to add each field to the CUDS object\n",
+    "    [ds_001.add(field, value) for field, value in zip(ontology_fields, data)]\n",
+    "    print(ds_001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    # accumulate the current dataset graph to gall\n",
+    "    gall += ds_001.graph"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualize the combined graph and export to HTML"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gvis(gall, \"papers.html\")"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
