--- a/hack1/notebook/exercise1.ipynb
+++ b/hack1/notebook/exercise1.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-09T10:17:13.447259Z",
+     "start_time": "2024-09-09T10:17:13.302272Z"
+    }
+   },
    "outputs": [],
    "source": [
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath('../'))\n",
     "from discomat.cuds.cuds import Cuds\n",
     "from discomat.cuds.session import Session\n",
     "from discomat.visualisation.cuds_vis import gvis\n",
@@ -29,8 +37,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-09T10:17:24.030641Z",
+     "start_time": "2024-09-09T10:17:24.022255Z"
+    }
+   },
    "outputs": [],
    "source": [
     "ds_001 = Cuds(ontology_type=DOMEDS.data_set, description=\"Example of DOME4.0 dataset\")\n",
@@ -55,9 +68,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-09T10:17:29.616196Z",
+     "start_time": "2024-09-09T10:17:29.613602Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing CUDS\n",
+      "=============\n",
+      "c.iri: https://www.ddmd.io/mio#cuds_iri_5f3c4107-9169-4e08-81f1-4ffc7abc68aa\n",
+      "\n",
+      "Namespace: http://www.ddmd.io/mio/cuds#\n",
+      "  uuid: 5f3c4107-9169-4e08-81f1-4ffc7abc68aa\n",
+      "  description: Example of DOME4.0 dataset\n",
+      "  label: unit_define\n",
+      "  type: http://dome40.eu/semantics/dome4.0_core_dataset#data_set\n",
+      "  PID: http://www.ddmd.io/mio#cuds_pid_5f3c4107-9169-4e08-81f1-4ffc7abc68aa\n",
+      "  CreationTime: 2024-09-09 11:17:24.022182\n",
+      "  Session: None\n",
+      "\n",
+      "Namespace: http://dome40.eu/semantics/dome4.0_core_dataset#\n",
+      "  has_dataset_creator: KOK_FOONG_LEE\n",
+      "  has_dataset_license: licence1\n",
+      "  has_dataset_publisher: DOME4.0_CONSORTIUM\n",
+      "  has_dataset_topic: SEA_Vessels\n",
+      "  has_dataset_URL: https://sintef.sharepoint.com/teams/DOME4.0/Delte%20dokumenter/WP4/T4.1%20Example%20files/Showcase%20#1%20(CMCL)/ship.txt\n",
+      "  has_dataset_description: Ship location example data (for a given ship at a given time\n",
+      "  has_dataset_issued_date: 2024-05-31\n",
+      "  has_dataset_semantic_keyword: https://schema.org/Vehicle\n",
+      "  has_syntactic_keyword: ship\n",
+      "  has_dataset_title: DATASET 001\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(ds_001)"
    ]
