--- a/hack1/notebook/exercise1.ipynb
+++ b/hack1/notebook/exercise1.ipynb
@@ -124,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('.csv', mode='r') as file:\n",
+    "with open('data.csv', mode='r') as file:\n",
     "    reader = csv.reader(file)\n",
     "    headers = next(reader)  # Read the headers\n",
     "\n",
