--- a/hack1/notebook/exercise1.ipynb
+++ b/hack1/notebook/exercise1.ipynb
@@ -192,6 +192,15 @@
    "source": [
     "gvis(gall, \"ds_002.html\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
