--- a/hack1/notebook/exercise2.ipynb
+++ b/hack1/notebook/exercise2.ipynb
@@ -9,7 +9,7 @@
     "import sys\n",
     "import os\n",
     "sys.path.append(os.path.abspath('../'))\n",
-    "from nlp.app import handler"
+    "from datascrap.app import handler"
    ]
   },
   {
@@ -137,15 +137,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gall = []"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -155,7 +146,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gall = []"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [
     "for data in dataset:\n",
@@ -164,7 +165,10 @@
     "    # Use list comprehension to add each field to the CUDS object\n",
     "    [ds_001.add(field, value) for field, value in zip(ontology_fields, data)]\n",
     "    print(ds_001)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -186,11 +190,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "gvis(gall, \"papers.html\")"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
