--- a/hack1/notebook/exercise3.ipynb
+++ b/hack1/notebook/exercise3.ipynb
@@ -9,7 +9,7 @@
     "import sys\n",
     "import os\n",
     "sys.path.append(os.path.abspath('../'))\n",
-    "from nlp.app import handler\n",
+    "from datascrap.app import handler\n",
     "import pandas as pd"
    ]
   },
